<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DistanceSensor</string>
    <string name="title_section1">Distance Sensor</string>
    <string name="title_section2">About Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_config">Config</string>
    <string name="btn_reset">Reset</string>
    <string name="title_x">X distance</string>
    <string name="title_y">Y distance</string>
    <string name="title_z">Z distance</string>
    <string name="title_rotate_x">X Rotate</string>
    <string name="title_rotate_y">Y Rotate</string>
    <string name="title_rotate_z">Z Rotate</string>
    <string name="title_background_x">background X acceleration</string>
    <string name="title_background_y">background Y acceleration</string>
    <string name="title_background_z">background Z acceleration</string>
    <string name="title_background_rotate_x">background X rotation</string>
    <string name="title_background_rotate_y">background Y rotation</string>
    <string name="title_background_rotate_z">background Z rotation</string>




</resources>
